# schematic-rs

./: .gitignore  Cargo.toml  FORMAT.md  README.md  build.sh
src/: block.rs  block_geometry.rs  error.rs  export3d.rs  export_gltf.rs  lib.rs  litematica.rs  main.rs  mc_models.rs  recipes.rs  schem.rs  schematic.rs  textures.rs
