[package]
name = "schem-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
# NBT parsing
fastnbt = "2"
serde = { version = "1", features = ["derive"] }

# Compression
flate2 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Pretty output
colored = "2"
tabled = "0.17"

# Date/time
chrono = "0.4"
